feat(lib): add page-speed hooks and configs
* Add .gitignore entries for node_modules/, .pnpm-store/, dist/, *.tsbuildinfo, coverage/, .env and .env.local, IDE/editor files (.vscode/, .idea/, .vscode/*, .rules), swap files (*.swp, *.swo), Thumbs.db, and additional log patterns (/*.log, pnpm-debug.log*)
* Add missing closing bracket to .size-limit.json
* Add "type": "module" field to package.json
* Add prepublishOnly script to run build, tests, and size check in package.json
* Pin devDependencies versions for @types/react, @types/react-dom, react, react-dom, tsup, typescript, and vitest in package.json
* Add src/index.ts that exports web-vitals, media, and resources hooks and their types with package header comment
* Add src/media/index.ts that exports useOptimizedImage and its types
* Add src/resources/index.ts that exports useDeferredMount and its types
* Add src/resources/useDeferredMount.ts implementing useDeferredMount hook (client directive, delay and priority options, requestIdleCallback/setTimeout logic, returns boolean mount flag)
* Add src/web-vitals/index.ts exporting useWebVitals, useLCP, and related types
* Add useOptimizedImage implementation (lazy/eager loading, IntersectionObserver, load handling, ref callback, returned state) embedded in added source content
* Add src/web-vitals/types.ts defining Metric, WebVitalsOptions, WebVitalsState, LCPOptions, and LCPState interfaces
* Add src/web-vitals/useLCP.ts implementing useLCP hook (onLCP integration, rating calculation, IntersectionObserver to detect likely LCP element, ref callback, fetchPriority)
* Add src/web-vitals/useWebVitals.ts implementing useWebVitals hook (tracks LCP, CLS, INP, FCP, TTFB via web-vitals and exposes aggregated state)
* Add tsconfig.json with compilerOptions (ES2020/ESNext targets, JSX, declarations, outDir/rootDir, moduleResolution, strict checks) and include/exclude patterns
* Update tsup.config.ts to use consistent double quotes, declare entry points, set formats, mark externa

--- a/.gitignore
+++ b/.gitignore
@@ -8,40 +8,36 @@ pnpm-debug.log*
 lerna-debug.log*
 
 # Dependencies
-node_modules
-/.pnp
-.pnp.js
+node_modules/
+.pnpm-store/
+
+# Build outputs
+dist/
+*.tsbuildinfo
 
 # Testing
-/coverage
+coverage/
 
-# Next.js
-/.next/
-/out/
+# Environment
+.env
+.env.local
 
-# Production
-/build
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
 
-# Misc
+# OS
 .DS_Store
-*.pem
-plate-playground-template/
+Thumbs.db
 
-# Debug
+# Logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# Local env files
-.env*.local
-.env
-
-# Vercel
-.vercel
-
-# TypeScript
-*.tsbuildinfo
-next-env.d.ts
+pnpm-debug.log*
 
 # Editor directories and files
 .vscode/*
