--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "author": "OpenSite AI (https://opensite.ai)",
   "license": "MIT",
+  "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -57,11 +58,6 @@
       "types": "./dist/resources.d.ts",
       "import": "./dist/resources.mjs",
       "require": "./dist/resources.js"
-    },
-    "./network": {
-      "types": "./dist/network.d.ts",
-      "import": "./dist/network.mjs",
-      "require": "./dist/network.js"
     }
   },
   "files": [
@@ -76,10 +72,8 @@
     "test": "vitest",
     "test:ci": "vitest run",
     "type-check": "tsc --noEmit",
-    "lint": "eslint src --ext .ts,.tsx",
-    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "size": "size-limit",
-    "prepublishOnly": "pnpm run build && pnpm run test:ci"
+    "prepublishOnly": "pnpm run build && pnpm run test:ci && pnpm run size"
   },
   "peerDependencies": {
     "react": ">=16.8.0",
@@ -89,17 +83,15 @@
     "@size-limit/preset-small-lib": "^11.1.6",
     "@testing-library/react": "^16.0.1",
     "@testing-library/react-hooks": "^8.0.1",
-    "@types/react": "^18.3.26",
-    "@types/react-dom": "^18.3.7",
-    "@typescript-eslint/eslint-plugin": "^8.15.0",
-    "@typescript-eslint/parser": "^8.15.0",
-    "eslint": "^9.15.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "happy-dom": "^15.11.7",
-    "prettier": "^3.3.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "size-limit": "^11.1.6",
-    "tsup": "^8.5.0",
-    "typescript": "^5.9.3",
-    "vitest": "^2.1.9"
+    "tsup": "^8.3.5",
+    "typescript": "^5.7.2",
+    "vitest": "^2.1.5"
   },
   "dependencies": {
     "web-vitals": "^4.2.4"
