--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "@types/node": "^24.10.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "glob": ">=10.5.0",
     "happy-dom": "^15.11.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
