--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@page-speed/hooks",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "Performance-optimized React hooks for Core Web Vitals, responsive images, lazy loading, and resource management. Drop-in implementations of web.dev best practices with zero configuration.",
   "keywords": [
     "react",
@@ -36,28 +36,28 @@
   "license": "MIT",
   "type": "module",
   "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
     },
     "./web-vitals": {
       "types": "./dist/web-vitals.d.ts",
-      "import": "./dist/web-vitals.mjs",
-      "require": "./dist/web-vitals.js"
+      "import": "./dist/web-vitals.js",
+      "require": "./dist/web-vitals.cjs"
     },
     "./media": {
       "types": "./dist/media.d.ts",
-      "import": "./dist/media.mjs",
-      "require": "./dist/media.js"
+      "import": "./dist/media.js",
+      "require": "./dist/media.cjs"
     },
     "./resources": {
       "types": "./dist/resources.d.ts",
-      "import": "./dist/resources.mjs",
-      "require": "./dist/resources.js"
+      "import": "./dist/resources.js",
+      "require": "./dist/resources.cjs"
     }
   },
   "files": [
